<resources>
    <!--********************************** General App Strings **********************************-->
    <string name="app_name">Trap Master</string>
    <string name="under_construction_string">This feature is currently under construction.
        Check back after the next update to see if it was added!</string>

    <string name="current_user_key">USER_KEY</string>
    <string name="current_pass_key">PASS_KEY</string>
    <string name="current_user_email">current_user_email</string>
    <string name="feature_will_be_implemented_toast">This will be implemented soon!</string>

    <!--************************************* Score Strings *************************************-->
    <string name="hit_string">HIT</string>
    <string name="miss_string">MISS</string>
    <string name="shot_string">SHOT</string>
    <string name="current_user_score">current_user_score</string>

    <!--********************************** Default Text Strings *********************************-->
    <string name="no_event_second_text">Click add for a new event!</string>
    <string name="no_event_main_text">No events</string>
    <string name="no_shot_second_text">Click add for a new shoot!</string>
    <string name="no_shot_main_text">No shoots</string>
    <string name="no_gun_second_text">Click add for a new gun!</string>
    <string name="no_gun_main_text">No guns</string>
    <string name="no_load_second_text">Click add for a new load!</string>
    <string name="no_load_main_text">No loads</string>

    <string name="add_event_text">Add events in event history!</string>
    <string name="add_shot_text">Add shoot with a new event!</string>
    <string name="add_gun_text">Add guns in the armory!</string>
    <string name="add_load_text">Add loads in the armory!</string>

    <!--************************************** Home Strings *************************************-->
    <string name="home_activity_title">Trap Master</string>

    <!--************************************* Login Strings *************************************-->
    <string name="login_activity_title">Trap Master</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="quick_event_text">Want to score an event before signing in?
        Try launching a Quick Event!</string>
    <!--Register-->
    <string name="error_invalid_email_format">This email address format is invalid</string>
    <string name="error_incorrect_password_length">This password is too short</string>
    <!--Login-->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <!--Both-->
    <string name="error_field_required">This field is required</string>

    <!--********************************** Quick Event Strings **********************************-->
    <string name="quick_event_flag_key">new_event_flag</string>
    <string name="quick_event_login">Login</string>
    <string name="quick_event_cancel">Cancel</string>

    <!--*********************************** New Event Strings ***********************************-->
    <string name="new_event_activity_title">New Event</string>
    <string name="num_shooter_key">number_shooters</string>
    <string name="num_rounds_key">number_rounds</string>
    <string name="shooter_list_key">shooter_list_key</string>
    <string name="round_list_key">round_list_key</string>

    <!--********************************** Post Event Strings ***********************************-->
    <string name="post_event_activity_title">Post Event</string>
    <string name="error_event_already_exists">Event name already exists</string>
    <string name="post_event_default_gun_text">Add guns in the armory!</string>
    <string name="post_event_default_load_text">"Add loads in the armory!"</string>

    <!--********************************* Event History Strings *********************************-->
    <string name="event_history_activity_title">Event History</string>

    <!--************************************ Armory Strings *************************************-->
    <string name="armory_activity_title">Armory</string>
    <string name="error_armory_gun_already_exists">Gun nickname already exists</string>
    <string name="error_armory_load_already_exists">Load nickname already exists</string>

    <!--************************************** Team Strings *************************************-->
    <string name="team_activity_title">Team</string>

    <!--************************************ Profile Strings ************************************-->
    <string name="profile_activity_title">Profile</string>
    <string name="error_shooter_name_already_exits">Shooter name already exists</string>
    <string name="error_default_string">Default string</string>

</resources>
